커뮤니티 디자인 변경중
figma -> flutter 변환